<resources>
    <string name="app_name">Restaurants Finder</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="connection_error">Connection Error!</string>
    <string name="signin_error_trya">Sign in error, try again!</string>
    <string name="check_connection">Please check your connection and try again!</string>
    <string name="find_your_place_today">Find your place today!</string>
    <string name="enter">Enter</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_cuisines">Select Cuisine</string>


    <string name="TAG_CUISINE_ID" translatable="false">cuisine_id</string>
    <string name="TAG_CUISINE_NAME" translatable="false">cuisine_name</string>
    <string name="BASE_URL_API" translatable="false">https://developers.zomato.com/</string>
    <string name="has_online_delivery">Has Online Delivery: </string>
    <string name="click_to_view_menu">Click to view menu</string>
    <string name="load_menu_by_clicking">Load menu by clicking</string>
    <string name="home_button">Home button</string>
    <string name="website_link_icon">Website link icon</string>
    <string name="favorite_icon">Favorite icon</string>
    <string name="image_of_food">Image of food</string>
    <string name="title_activity_nav" translatable="false">NavActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_manage_friends">Manage Friends</string>
    <string name="TAG_RESTAURANT" translatable="false">restaurant_tag</string>
    <string name="google_maps_key" translatable="false">AIzaSyCKKPWYpQHu8ltGxd3bJ5PduRO-qZZIRJQ</string>
    <string name="title_activity_navig" translatable="false">NavigActivity</string>
    <string name="RestaurantsFilterDialog" translatable="false">RestaurantsFilterDialog</string>
    <string name="TAG_RESTAURANT_ID" translatable="false">restaurantIdTag</string>
    <string name="title_activity_restaurant_new">Restaurant Activity</string>

    <string name="TAG_IS_FIREBASE_RESTAURANT" translatable="false">isFirebaseRestaurant</string>
    <string name="TAG_USER_ID" translatable="false">TAG_USER_ID</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="favorites">Favorites</string>
    <string name="share_app">Share App</string>
    <string name="contact_us">Contact Us</string>
    <string name="log_in_out">Log in/out</string>
    <string name="settings">Settings</string>


    <string-array name="cuisines_list">
        <item>American</item>
        <item>Asian</item>
        <item>BBQ</item>
        <item>Bar Food</item>
        <item>Bengali</item>
        <item>Brazilian</item>
        <item>Breakfast</item>
        <item>British</item>
        <item>Burger</item>
        <item>Cafe</item>
        <item>Cantonese</item>
        <item>Chinese</item>
        <item>Coffee and Tea</item>
        <item>Contemporary</item>
        <item>Desserts</item>
        <item>Diner</item>
        <item>Eastern European</item>
        <item>European</item>
        <item>Fast Food</item>
        <item>Fish and Chips</item>
        <item>French</item>
        <item>Greek</item>
        <item>Grill</item>
        <item>Healthy Food</item>
        <item>Indian</item>
        <item>International</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Kebab</item>
        <item>Latin American</item>
        <item>Mediterranean</item>
        <item>Mexican</item>
        <item>Middle Eastern</item>
        <item>Nepalese</item>
        <item>North Indian</item>
        <item>Others</item>
        <item>Pakistani</item>
        <item>Pizza</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Sandwich</item>
        <item>Scandinavian</item>
        <item>Seafood</item>
        <item>South Indian</item>
        <item>Spanish</item>
        <item>Steak</item>
        <item>Sushi</item>
        <item>Tapas</item>
        <item>Tea</item>
        <item>Tex-Mex</item>
        <item>Thai</item>
        <item>Turkish</item>
    </string-array>


    <string name="SHARED_PREFERENCES_DEFAULT_LOCATION" translatable="false">SHARED_PREFERENCES_DEFAULT_LOCATION</string>
    <string name="cuisine_list">Cuisine List</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="menu_url">Menu Url</string>
    <string name="web_url">Web Url</string>
    <string name="cuisine">Cuisine</string>
    <string name="delivery">Delivery</string>
    <string name="photo">Photo</string>
    <string name="dairy_free">Dairy free</string>
    <string name="gluten_free">Gluten free</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="restaurant_type">Restaurant type</string>
    <string name="accessible_toilets">Accessible toilets</string>
    <string name="step_free_access">Step free access</string>
    <string name="accessibility">Accessibility</string>
    <string name="has_delivery">Has Delivery</string>
    <string name="select_to_take_a_photo_image">Select to take a photo image.</string>
    <string name="remove_photo_button">Remove photo button</string>
    <string name="popular_restaurants">Popular Restaurants</string>
    <string name="no_popular_restaurants">No Popular Restaurants</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="manage">Manage</string>
    <string name="no_favourites_restaurants">No Favourites Restaurants</string>
    <string name="skip_login">Skip Login</string>
    <string name="restaurant_finder_logo">Restaurant Finder logo</string>
    <string name="copyright_icon">Copyright icon</string>
    <string name="food_image">Food Image</string>
    <string name="settings_page">Settings Page</string>
    <string name="default_location">Default Location:</string>
    <string name="close_confirmation">Close Confirmation</string>
    <string name="close_dialog">Are you sure you want to close this activity?</string>
    <string name="unsaved_changes">All unsaved changes will be lost!</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="set_your_location">Set Your Location</string>
    <string name="set">Set</string>
    <string name="new_review">New Review</string>
    <string name="close_button" translatable="false">close button</string>
    <string name="rating">Rating</string>
    <string name="review">Review</string>
    <string name="picture">Picture</string>
    <string name="image_taken_from_camera">Image taken from camera.</string>

    <string name="clear">Clear</string>
    <string name="add">Add</string>
    <string name="review_image">Review Image</string>
    <string name="distance">Distance</string>
    <string name="map_icon">Map Icon</string>
    <string name="phone_icon">Phone icon</string>
    <string name="share_this_restaurant">Share this restaurant</string>
    <string name="share_app_icon">Share App Icon</string>
    <string name="favourite_restaurant">Favourite Restaurant</string>
    <string name="favorites_icon">Favorites Icon</string>
    <string name="restaurant_menu">Restaurant Menu</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="restaurant_website">Restaurant Website</string>
    <string name="website_icon">Website Icon</string>
    <string name="vegan_food">Vegan Food</string>
    <string name="vegetarian_food">Vegetarian food</string>
    <string name="gluten_free_food">Gluten Free Food</string>
    <string name="diary_free_food">Diary Free Food</string>
    <string name="lang_opt_icon_cd">Language options Icon</string>
    <string name="review_message">Review message</string>
    <string name="rating_text">Rating:</string>
    <string name="favorite_button">Favorite button</string>
    <string name="search_by_name">Search by name</string>
    <string name="search_hint">Search...</string>
    <string name="search">Search</string>
    <string name="no_reviews">No Reviews</string>



    <string-array name="languages_settings">
        <item name="English">English</item>
        <item name="French" >French</item>
        <item name="German" >German</item>
        <item name="Italian" >Italian</item>
        <item name="Spanish">Spanish</item>
    </string-array>

    <string name="error_message">Something went wrong. Please try again later.</string>
    <string name="restaurant_recommended_msg">Restaurant has been recommended to friend.</string>
    <string name="location_shared_preferences_name">Settings</string>
    <string name="change_application_language">Change Application Language</string>
    <string name="submit_change">Submit Change</string>
    <string name="click_to_take_photo">Click to take photo</string>
    <string name="click_to_choose_photo">Click to choose photo</string>
    <string name="recommended_restaurants">Recommended Restaurants</string>
    <string name="no_recommended_restaurants">No Recommended Restaurants</string>
    <string name="users">Users</string>
    <string name="no_users_found">No users found</string>
    <string name="friends">Friends</string>
    <string name="you_don_t_have_any_friends">You don\'t have any friends...</string>
    <string name="member_name">Member Name</string>
    <string name="member_since">Member Since</string>
    <string name="date">Date</string>
    <string name="member_status">Member Status</string>
    <string name="gold" translatable="false">Gold</string>
    <string name="friends_list_is_empty">Friends list is empty</string>
    <string name="reviews_left">Reviews Left</string>
    <string name="you_have_not_wrote_any_reviews_yet">You have not wrote any reviews yet.</string>
    <string name="my_friends">My Friends</string>
    <string name="empty_list">Empty List</string>
    <string name="recommend_to_a_friend">Recommend to a friend</string>
    <string name="reviews_">Reviews:</string>
    <string name="distance_in_miles">distance in miles</string>
    <string name="name">Name</string>
    <string name="email">Email</string>

</resources>
