<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Activities.RestaurantActivity">


    <android.support.design.widget.AppBarLayout
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_appbar">
        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <ImageView
                android:contentDescription="@string/image_of_food"
                android:id="@+id/restaurant_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/food"
                android:elevation="@dimen/elev_four"
                app:layout_collapseMode="parallax"
                android:scaleType="centerCrop" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/ll_height"
                android:background="@color/colorPrimaryDark"
                app:layout_collapseMode="pin"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/margin_top_ten"
                android:paddingTop="@dimen/margin_top_ten">

                <TextView
                    android:id="@+id/overall_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sixteen_TS"
                    android:textStyle="bold" />

                <ImageView
                    android:contentDescription="@string/favorite_icon"
                    android:id="@+id/favorites_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_favorite_white_24dp" />

                <ImageView
                    android:contentDescription="@string/website_link_icon"
                    android:id="@+id/web_link_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_language_white_24dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_top_ten">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/padding_eight">

                        <ImageView
                            android:contentDescription="@string/home_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="@dimen/padd_five"
                            android:src="@drawable/ic_home_white_24dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/address_tv_1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/twentyfive_TS"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/pink"
                            android:paddingBottom="@dimen/padd_five"
                            android:text="@string/has_online_delivery"
                            android:textSize="@dimen/eighteen_TS" />

                        <TextView
                            android:gravity="center"
                            android:textColor="@color/colorPrimaryDark"
                            android:fontFamily="@font/pink"
                            android:textSize="@dimen/eighteen_TS"
                            android:id="@+id/online_delivery_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/click_to_view_menu"
                            android:fontFamily="@font/pink"
                            android:textSize="@dimen/eighteen_TS"
                            android:textStyle="bold|italic" />

                        <ImageView
                            android:contentDescription="@string/load_menu_by_clicking"
                            android:id="@+id/menu_url_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="@dimen/padd_five"
                            android:src="@drawable/ic_library_books_24dp" />

                    </LinearLayout>

                </LinearLayout>

                <com.google.android.gms.maps.MapView
                    android:id="@+id/google_maps"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>